effects: Properly reset present times in coverswitch and flipswitch effects

The last presentation timestamps should be reset when all animations
finish rather than when the effect finishes. Otherwise, the calculated
time diff for the first animation frame will be too big.

BUG: 433471


(cherry picked from commit 5839e59e24c094104fcfd83884a7406a9e9e0e7f)